<resources>
    <string name="app_name">dogscloud</string>
    <string name="login">Login</string>
    <string name="fraselogin">Inicia sesión para que empecemos este paseo!</string>
    <string name="forgetPassword">¿Olvidaste tu contraseña?</string>
    <string name="newaccount">Crear nueva cuenta</string>
    <string name="frasesignup">Registrate , así podemos conocerte mejor</string>
    <string name="registrar">Registrar</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--Últimos agregados-->
    <string name="nameLogo">Dog’s in Cloud</string>
    <string name="nuestros_paseadores">Nuestros paseadores</string>
    <string name="nuestros_cuidadores">Nuestros cuidadores</string>
    <string name="nuestros_trabajadores">Nuestros trabajadores</string>
    <string name="buscar_por">Buscar por:</string>
    <string name="btnCamara">Camara</string>
    <string name="google_map_api_key">AIzaSyAnUnzHN03rafq8y7G3WMDaJ1fwoWz8qzg</string>

</resources>