<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/top_rectangle"
        android:layout_width="411dp"
        android:layout_height="152dp"
        android:layout_marginTop="48dp"
        android:translationY="-4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/icon_company"
        android:layout_width="88dp"
        android:layout_height="82dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307"
        app:srcCompat="@drawable/logodog" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="340dp"
        android:layout_height="597dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="38sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/fraselogin"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal" />

        <LinearLayout
            android:id="@+id/linearLayout_User"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/background_input"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageUser"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="userIcon"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:src="@drawable/ic_user"
                app:tint="@color/primaryColor" />

            <EditText
                android:id="@+id/edittext_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="Usuario"
                android:inputType="text"
                android:textAlignment="center"
                android:textColorHint="@color/primaryColor"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_Password"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/background_input"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagePassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="passwordIcon"
                android:scaleX="0.7"
                android:scaleY="0.7"

                android:src="@drawable/ic_password"
                app:tint="@color/primaryColor" />

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="Contraseña"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="@color/primaryColor"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="97dp"
                android:layout_height="wrap_content"

                android:text="Recordar contraseña"
                android:textColor="@color/black"
                android:textSize="12dp"
                app:layout_constraintEnd_toStartOf="@+id/buttonForget"
                app:layout_constraintHorizontal_bias="0.695"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_Password" />

            <Button
                android:id="@+id/buttonForget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:text="@string/forgetPassword"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:text="Iniciar Sesion"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/no_tienes_cuenta"
            android:textColor="@color/grayDark"
            android:textStyle="bold" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNewAcccount"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:text="@string/crear_cuenta"
            android:textColor="@color/primaryColor"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>